RESOLVED FIXED 275361
[Glib] Redundant move in StreamClientConnection::trySendSyncStream()
https://bugs.webkit.org/show_bug.cgi?id=275361
Summary [Glib] Redundant move in StreamClientConnection::trySendSyncStream()
Pawel Lampe
Reported 2024-06-11 07:37:34 PDT
When GTK port is being built with -DENABLE_GPU_PROCESS=ON the following build error is observed: (...) /home/plampe/WebKit/Source/WebKit/Platform/IPC/StreamClientConnection.h:295:66: error: redundant move in return statement [-Werror=redundant-move] /home/plampe/WebKit/Source/WebKit/Platform/IPC/StreamClientConnection.h:295:66: note: remove 'std::move' call
Attachments
EWS
Comment 1 2024-06-11 08:37:04 PDT
Committed 279910@main (8f8cde57e191): <https://commits.webkit.org/279910@main> Reviewed commits have been landed. Closing PR #29715 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2024-06-11 08:38:15 PDT
Note You need to log in before you can comment on or make changes to this bug.