[Glib] Redundant move in StreamClientConnection::trySendSyncStream() https://bugs.webkit.org/show_bug.cgi?id=275361

Reviewed by Michael Catanzaro.

This change fixes a build of GTK port with -DENABLE_GPU_PROCESS=ON

* Source/WebKit/Platform/IPC/StreamClientConnection.h:
(IPC::StreamClientConnection::trySendSyncStream):

Canonical link: https://commits.webkit.org/279910@main